Fixed Color flicker on links during load

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -68,11 +68,6 @@ body{
         font-size       : $link-size;
         text-shadow     : 4px 3px rgba(0,0,0,.3);
         font-weight     : bold;
-        transition      : color .25s;
-
-        &:hover{
-            color       : green;
-        }
     }
 }
 
